--- a/Copy_of_5_3_2_데이터증식_ipynb의_사본.ipynb
+++ b/Copy_of_5_3_2_데이터증식_ipynb의_사본.ipynb
@@ -752,6 +752,275 @@
       "metadata": {
         "id": "PIpsdGiWumqt",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 799
+        },
+        "outputId": "311b1b83-8d88-46f6-d9cf-189edb97e6d3"
+      },
+      "source": [
+        "conv_base.summary()"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"vgg16\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_2 (InputLayer)         (None, 150, 150, 3)       0         \n",
+            "_________________________________________________________________\n",
+            "block1_conv1 (Conv2D)        (None, 150, 150, 64)      1792      \n",
+            "_________________________________________________________________\n",
+            "block1_conv2 (Conv2D)        (None, 150, 150, 64)      36928     \n",
+            "_________________________________________________________________\n",
+            "block1_pool (MaxPooling2D)   (None, 75, 75, 64)        0         \n",
+            "_________________________________________________________________\n",
+            "block2_conv1 (Conv2D)        (None, 75, 75, 128)       73856     \n",
+            "_________________________________________________________________\n",
+            "block2_conv2 (Conv2D)        (None, 75, 75, 128)       147584    \n",
+            "_________________________________________________________________\n",
+            "block2_pool (MaxPooling2D)   (None, 37, 37, 128)       0         \n",
+            "_________________________________________________________________\n",
+            "block3_conv1 (Conv2D)        (None, 37, 37, 256)       295168    \n",
+            "_________________________________________________________________\n",
+            "block3_conv2 (Conv2D)        (None, 37, 37, 256)       590080    \n",
+            "_________________________________________________________________\n",
+            "block3_conv3 (Conv2D)        (None, 37, 37, 256)       590080    \n",
+            "_________________________________________________________________\n",
+            "block3_pool (MaxPooling2D)   (None, 18, 18, 256)       0         \n",
+            "_________________________________________________________________\n",
+            "block4_conv1 (Conv2D)        (None, 18, 18, 512)       1180160   \n",
+            "_________________________________________________________________\n",
+            "block4_conv2 (Conv2D)        (None, 18, 18, 512)       2359808   \n",
+            "_________________________________________________________________\n",
+            "block4_conv3 (Conv2D)        (None, 18, 18, 512)       2359808   \n",
+            "_________________________________________________________________\n",
+            "block4_pool (MaxPooling2D)   (None, 9, 9, 512)         0         \n",
+            "_________________________________________________________________\n",
+            "block5_conv1 (Conv2D)        (None, 9, 9, 512)         2359808   \n",
+            "_________________________________________________________________\n",
+            "block5_conv2 (Conv2D)        (None, 9, 9, 512)         2359808   \n",
+            "_________________________________________________________________\n",
+            "block5_conv3 (Conv2D)        (None, 9, 9, 512)         2359808   \n",
+            "_________________________________________________________________\n",
+            "block5_pool (MaxPooling2D)   (None, 4, 4, 512)         0         \n",
+            "=================================================================\n",
+            "Total params: 14,714,688\n",
+            "Trainable params: 0\n",
+            "Non-trainable params: 14,714,688\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XXLweRM_ywa6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 340
+        },
+        "outputId": "46b897b8-1bd1-4713-8e9e-e0421ef68462"
+      },
+      "source": [
+        "for layer in conv_base.layers:\n",
+        "  print(layer.name)"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "input_2\n",
+            "block1_conv1\n",
+            "block1_conv2\n",
+            "block1_pool\n",
+            "block2_conv1\n",
+            "block2_conv2\n",
+            "block2_pool\n",
+            "block3_conv1\n",
+            "block3_conv2\n",
+            "block3_conv3\n",
+            "block3_pool\n",
+            "block4_conv1\n",
+            "block4_conv2\n",
+            "block4_conv3\n",
+            "block4_pool\n",
+            "block5_conv1\n",
+            "block5_conv2\n",
+            "block5_conv3\n",
+            "block5_pool\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NwChHcUUyyd0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "conv_base.trainable = True\n",
+        "\n",
+        "set_trainable = False\n",
+        "for layer in conv_base.layers:\n",
+        "    if layer.name == 'block5_conv1':\n",
+        "        set_trainable = True\n",
+        "    if set_trainable:\n",
+        "        layer.trainable = True\n",
+        "    else:\n",
+        "        layer.trainable = False"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OH3gP_k6y0R5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 799
+        },
+        "outputId": "45b2c821-039c-4d2b-d41a-0a8f37b88586"
+      },
+      "source": [
+        "conv_base.summary()"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"vgg16\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_2 (InputLayer)         (None, 150, 150, 3)       0         \n",
+            "_________________________________________________________________\n",
+            "block1_conv1 (Conv2D)        (None, 150, 150, 64)      1792      \n",
+            "_________________________________________________________________\n",
+            "block1_conv2 (Conv2D)        (None, 150, 150, 64)      36928     \n",
+            "_________________________________________________________________\n",
+            "block1_pool (MaxPooling2D)   (None, 75, 75, 64)        0         \n",
+            "_________________________________________________________________\n",
+            "block2_conv1 (Conv2D)        (None, 75, 75, 128)       73856     \n",
+            "_________________________________________________________________\n",
+            "block2_conv2 (Conv2D)        (None, 75, 75, 128)       147584    \n",
+            "_________________________________________________________________\n",
+            "block2_pool (MaxPooling2D)   (None, 37, 37, 128)       0         \n",
+            "_________________________________________________________________\n",
+            "block3_conv1 (Conv2D)        (None, 37, 37, 256)       295168    \n",
+            "_________________________________________________________________\n",
+            "block3_conv2 (Conv2D)        (None, 37, 37, 256)       590080    \n",
+            "_________________________________________________________________\n",
+            "block3_conv3 (Conv2D)        (None, 37, 37, 256)       590080    \n",
+            "_________________________________________________________________\n",
+            "block3_pool (MaxPooling2D)   (None, 18, 18, 256)       0         \n",
+            "_________________________________________________________________\n",
+            "block4_conv1 (Conv2D)        (None, 18, 18, 512)       1180160   \n",
+            "_________________________________________________________________\n",
+            "block4_conv2 (Conv2D)        (None, 18, 18, 512)       2359808   \n",
+            "_________________________________________________________________\n",
+            "block4_conv3 (Conv2D)        (None, 18, 18, 512)       2359808   \n",
+            "_________________________________________________________________\n",
+            "block4_pool (MaxPooling2D)   (None, 9, 9, 512)         0         \n",
+            "_________________________________________________________________\n",
+            "block5_conv1 (Conv2D)        (None, 9, 9, 512)         2359808   \n",
+            "_________________________________________________________________\n",
+            "block5_conv2 (Conv2D)        (None, 9, 9, 512)         2359808   \n",
+            "_________________________________________________________________\n",
+            "block5_conv3 (Conv2D)        (None, 9, 9, 512)         2359808   \n",
+            "_________________________________________________________________\n",
+            "block5_pool (MaxPooling2D)   (None, 4, 4, 512)         0         \n",
+            "=================================================================\n",
+            "Total params: 14,714,688\n",
+            "Trainable params: 7,079,424\n",
+            "Non-trainable params: 7,635,264\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WKzr6Wpwy1fN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 527
+        },
+        "outputId": "ed3e215b-c602-4fa6-fdff-a77397d9965f"
+      },
+      "source": [
+        "model.compile(loss='binary_crossentropy',\n",
+        "              optimizer=optimizers.RMSprop(lr=1e-5),\n",
+        "              metrics=['acc'])\n",
+        "\n",
+        "history = model.fit_generator(\n",
+        "      train_generator,\n",
+        "      steps_per_epoch=100,\n",
+        "      epochs=15,\n",
+        "      validation_data=validation_generator,\n",
+        "      validation_steps=50)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/15\n",
+            "100/100 [==============================] - 20s 198ms/step - loss: 0.2088 - acc: 0.9145 - val_loss: 0.0973 - val_acc: 0.9010\n",
+            "Epoch 2/15\n",
+            "100/100 [==============================] - 18s 180ms/step - loss: 0.1685 - acc: 0.9280 - val_loss: 0.0175 - val_acc: 0.9100\n",
+            "Epoch 3/15\n",
+            "100/100 [==============================] - 19s 188ms/step - loss: 0.1304 - acc: 0.9525 - val_loss: 0.0929 - val_acc: 0.9170\n",
+            "Epoch 4/15\n",
+            "100/100 [==============================] - 19s 188ms/step - loss: 0.1291 - acc: 0.9475 - val_loss: 0.3871 - val_acc: 0.9160\n",
+            "Epoch 5/15\n",
+            "100/100 [==============================] - 18s 183ms/step - loss: 0.1078 - acc: 0.9550 - val_loss: 0.0456 - val_acc: 0.9110\n",
+            "Epoch 6/15\n",
+            "100/100 [==============================] - 18s 181ms/step - loss: 0.0925 - acc: 0.9640 - val_loss: 0.2727 - val_acc: 0.9190\n",
+            "Epoch 7/15\n",
+            "100/100 [==============================] - 18s 180ms/step - loss: 0.0803 - acc: 0.9700 - val_loss: 0.0725 - val_acc: 0.9090\n",
+            "Epoch 8/15\n",
+            "100/100 [==============================] - 19s 187ms/step - loss: 0.0769 - acc: 0.9735 - val_loss: 0.1099 - val_acc: 0.9280\n",
+            "Epoch 9/15\n",
+            "100/100 [==============================] - 19s 187ms/step - loss: 0.0695 - acc: 0.9750 - val_loss: 0.2533 - val_acc: 0.9290\n",
+            "Epoch 10/15\n",
+            "100/100 [==============================] - 18s 181ms/step - loss: 0.0545 - acc: 0.9810 - val_loss: 0.4002 - val_acc: 0.9250\n",
+            "Epoch 11/15\n",
+            "100/100 [==============================] - 18s 182ms/step - loss: 0.0577 - acc: 0.9780 - val_loss: 0.1705 - val_acc: 0.9250\n",
+            "Epoch 12/15\n",
+            "100/100 [==============================] - 18s 182ms/step - loss: 0.0409 - acc: 0.9885 - val_loss: 0.0566 - val_acc: 0.9300\n",
+            "Epoch 13/15\n",
+            "100/100 [==============================] - 19s 189ms/step - loss: 0.0415 - acc: 0.9850 - val_loss: 0.0290 - val_acc: 0.9240\n",
+            "Epoch 14/15\n",
+            "100/100 [==============================] - 19s 186ms/step - loss: 0.0403 - acc: 0.9865 - val_loss: 0.3992 - val_acc: 0.9330\n",
+            "Epoch 15/15\n",
+            "100/100 [==============================] - 18s 184ms/step - loss: 0.0336 - acc: 0.9875 - val_loss: 0.2233 - val_acc: 0.9370\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ACQ21AyPy58x",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
